--- a/src/Snebur.VisualStudio.Compartilhado/Snebur.VisualStudio.Compartilhado.csproj
+++ b/src/Snebur.VisualStudio.Compartilhado/Snebur.VisualStudio.Compartilhado.csproj
@@ -187,5 +187,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Modelos\AtributoPartial.ts" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensao\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
