--- a/src/Snebur.VisualStudio2022/Snebur.VisualStudio2022.csproj
+++ b/src/Snebur.VisualStudio2022/Snebur.VisualStudio2022.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Publicacao\EnumTipoPasta.cs" />
     <Compile Include="Publicacao\InfoVersao.cs" />
     <Compile Include="Publicacao\PublicacaoConfig.cs" />
+    <Compile Include="ToolWindows\Migracao\AjudanteRetornarProximaMigracao.cs" />
     <Compile Include="ToolWindows\Migracao\AmbienteViewModel.cs" />
     <Compile Include="ToolWindows\Migracao\MigrationWindowControl.Validacao.cs" />
     <Compile Include="ToolWindows\Migracao\MigrationWindowControl.xaml.cs">
@@ -255,7 +256,7 @@
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Entityframework">
-      <Version>6.4.4</Version>
+      <Version>6.3.0</Version>
     </PackageReference>
     <PackageReference Include="HtmlAgilityPack">
       <Version>1.11.43</Version>
