--- a/src/Snebur.VisualStudio.Compartilhado/Snebur.VisualStudio.Compartilhado.csproj
+++ b/src/Snebur.VisualStudio.Compartilhado/Snebur.VisualStudio.Compartilhado.csproj
@@ -1,195 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9446982B-F659-49EA-A137-A283707329FB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Snebur.VisualStudio.Compartilhado</RootNamespace>
-    <AssemblyName>Snebur.VisualStudio.Compartilhado</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="HtmlAgilityPack, Version=1.11.43.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\HtmlAgilityPack.1.11.43\lib\Net45\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Aplicacao\BaseAplicacaoVisualStudio.cs" />
-    <Compile Include="Aplicacao\Log\ConfiguracaoVSUtil.cs" />
-    <Compile Include="Projeto\BaseProjeto.cs" />
-    <Compile Include="Projeto\ConfiguracaoProjeto.cs" />
-    <Compile Include="Projeto\ContextoDados\ConfiguracaoProjetoContextoDados.cs" />
-    <Compile Include="Projeto\ContextoDados\ProjetoContextoDados.cs" />
-    <Compile Include="Projeto\Dominio\Ajudante\AjudantePropriedades.cs" />
-    <Compile Include="Projeto\Dominio\AtribuirValorProprieadades\Gerador.cs" />
-    <Compile Include="Projeto\Dominio\Atributo\GeradorDominioAtributo.cs" />
-    <Compile Include="Projeto\Dominio\BaseGeradorDominio.cs" />
-    <Compile Include="Projeto\Dominio\Classes\GeradorDominioClasse.cs" />
-    <Compile Include="Projeto\Dominio\ConfiguracaoProjetoDominio.cs" />
-    <Compile Include="Projeto\Dominio\Constante\GeradorDominioConstante.cs" />
-    <Compile Include="Projeto\Dominio\Enum\GeradorDominioEnum.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\BaseEstrutura.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\BaseEstruturaClasse.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaClasseAtributo.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaClasseDominio.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaConstantes.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaConstrutor.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaInterface.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaPropriedade.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaPropriedadeEspecializada.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaPropriedadeEstatica.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaPropriedadeMensagemValidacao.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\EstruturaPropriedadePublica.cs" />
-    <Compile Include="Projeto\Dominio\Estrutura\ParametroConstrutor.cs" />
-    <Compile Include="Projeto\Dominio\Interface\GeradorDominioInterface.cs" />
-    <Compile Include="Projeto\Dominio\OrdenarTipos.cs" />
-    <Compile Include="Projeto\Dominio\ProjetoDominio.AtribuirValorPropriedade.cs" />
-    <Compile Include="Projeto\Dominio\ProjetoDominio.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteAssembly.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteReflexao.Atributos.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteReflexao.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteReflexao.Propriedades.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteReflexao.TipoBaseDominio.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteReflexao.TipoEntidade.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteReflexao.TipoEnum.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\Ajudante\AjudanteReflexao.TipoPrimario.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\AtributoPropriedade.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\EstruturaPropriedadeReflexao.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.AdicionarTipos.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.Atributos.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.Propriedades.Atributos.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.Propriedades.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.Tipo.Atributos.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.TipoBaseDominio.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.TipoComplexo.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.TipoEntidade.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.TipoEnum.cs" />
-    <Compile Include="Projeto\Dominio\Reflexao\GeradorDominioReflexao.TiposPrimario.cs" />
-    <Compile Include="Projeto\Estilo\ConfiguracaoProjetoEstilo.cs" />
-    <Compile Include="Projeto\Estilo\ProjetoEstilo.cs" />
-    <Compile Include="Projeto\ProjectVS.cs" />
-    <Compile Include="Projeto\ProjetoViewModel.cs" />
-    <Compile Include="Projeto\RegrasNegocio\ConfiguracaoProjetoRegrasNegocio.cs" />
-    <Compile Include="Projeto\RegrasNegocio\ExtensaoEntidade.cs" />
-    <Compile Include="Projeto\RegrasNegocio\ProjetoRegrasNegocioCSharp.cs" />
-    <Compile Include="Projeto\RegrasNegocio\ProjetoRegrasNegocioTypeScript.cs" />
-    <Compile Include="Projeto\RegrasNegocio\ProjetoRegrasNegocioUtil.cs" />
-    <Compile Include="Projeto\Servicos\ConfiguracaoProjetoServico.cs" />
-    <Compile Include="Projeto\Servicos\ProjetoServicosDotNet.cs" />
-    <Compile Include="Projeto\Servicos\ProjetoServicosTypescript.cs" />
-    <Compile Include="Projeto\TypeScript\Arquivo\ArquivoTSDominio.cs" />
-    <Compile Include="Projeto\TypeScript\Arquivo\ArquivoTSSistema.cs" />
-    <Compile Include="Projeto\TypeScript\Arquivo\ArquivoTypeScript.cs" />
-    <Compile Include="Projeto\TypeScript\Arquivo\BaseArquivoTypeScript.cs" />
-    <Compile Include="Projeto\TypeScript\Arquivo\EnumTipoArquivoTypeScript.cs" />
-    <Compile Include="Projeto\TypeScript\Arquivo\ProjetoTSDepdencia.cs" />
-    <Compile Include="Projeto\TypeScript\Arquivo\TipoArquivoTypeScriptUtil.cs" />
-    <Compile Include="Projeto\TypeScript\CompilerOptions.cs" />
-    <Compile Include="Projeto\TypeScript\ConfiguracaoProjetoTypeScript.cs" />
-    <Compile Include="Projeto\TypeScript\DeclaracaoTipos.cs" />
-    <Compile Include="Aplicacao\GerenciadorProjetos.cs" />
-    <Compile Include="Projeto\TypeScript\Normalizar\NormalizadorExpreessaoWhere.cs" />
-    <Compile Include="Projeto\TypeScript\Normalizar\NormalizadorExpreessaWhereES6.cs" />
-    <Compile Include="Projeto\TypeScript\ProjetoTypeScript.cs" />
-    <Compile Include="Projeto\Web\Apresentacao\ConfiguracaoProjetoWebApresentacao.cs" />
-    <Compile Include="Projeto\Web\Apresentacao\ProjetoWebApresentacao.cs" />
-    <Compile Include="Projeto\Web\BaseConfiguracaoProjetoWeb.cs" />
-    <Compile Include="Projeto\Web\ProjetoWeb.cs" />
-    <Compile Include="Projeto\Web\ProjetoWeb.Static.cs" />
-    <Compile Include="Projeto\Web\WebService\ConfiguracaoWebService.cs" />
-    <Compile Include="Projeto\Web\WebService\ProjetoWebService.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilidade\AssemblyInfoUtil.cs" />
-    <Compile Include="Utilidade\CaminhosUtil.cs" />
-    <Compile Include="Utilidade\ConfiguracaoGeral.cs" />
-    <Compile Include="Utilidade\ConstantesProjeto.cs" />
-    <Compile Include="Utilidade\FormatacaoVSUtil.cs" />
-    <Compile Include="Utilidade\FormatarDocumentoUtil.cs" />
-    <Compile Include="Utilidade\HtmlReferenciaUtil.cs" />
-    <Compile Include="Aplicacao\Log\LogMensagemViewModel.cs" />
-    <Compile Include="Aplicacao\Log\LogVS.cs" />
-    <Compile Include="Projeto\TypeScript\Normalizar\NormalizarCompilacaoJavascript.cs" />
-    <Compile Include="Utilidade\ProjetoTypeScriptUtil.cs" />
-    <Compile Include="Utilidade\ProjetoTypeScriptUtil.Partial.cs" />
-    <Compile Include="Utilidade\LocalProjetoUtil.cs" />
-    <Compile Include="Utilidade\PropriedadeUtil.cs" />
-    <Compile Include="Utilidade\RecursoUtil.cs" />
-    <Compile Include="Utilidade\SubstituicaoNovoStringFormatTS.cs" />
-    <Compile Include="Utilidade\TagElementoUtil.cs" />
-    <Compile Include="Utilidade\TipoCSUtil.cs" />
-    <Compile Include="Utilidade\TipoUtils.cs" />
-    <Compile Include="Utilidade\VSUtil.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Snebur.Framework\src\AcessoDados\src\AcessoDados\Snebur.AcessoDados.csproj">
-      <Project>{ae39cd55-5282-48a5-8131-6704c825f26a}</Project>
-      <Name>Snebur.AcessoDados</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Snebur.Framework\src\Core\Snebur.csproj">
-      <Project>{ec174c4f-8122-41a3-8360-f04c4c8fc3ba}</Project>
-      <Name>Snebur</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Snebur.Framework\src\Depuracao\Snebur.Depuracao.csproj">
-      <Project>{538e7ecc-f8fc-49fe-9a6a-b5e704af096c}</Project>
-      <Name>Snebur.Depuracao</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <EmbeddedResource Include="Resources\ItemTemplate\ControleUsuarioItemTemplate.zip" />
-    <EmbeddedResource Include="Resources\ItemTemplate\DocumentoPrincipalItemTemplate.zip" />
-    <EmbeddedResource Include="Resources\ItemTemplate\JanelaItemTemplate.zip" />
-    <EmbeddedResource Include="Resources\ItemTemplate\PaginaItemTemplate.zip" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Resources\Icon.ico" />
-    <Content Include="Resources\Icon.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Icones\Icon.png" />
-    <Content Include="Resources\Icones\Images.png" />
-    <Content Include="Resources\Images.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\Modelos\AtributoPartial.ts" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensao\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<!--<TargetFramework>net7.0</TargetFramework>-->
+		<TargetFrameworks>net48;net7.0</TargetFrameworks>
+		<RootNamespace>Snebur.VisualStudio.Compartilhado</RootNamespace>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<Nullable>disable</Nullable>
+		<AssemblyName>Snebur.VisualStudio.Compartilhado</AssemblyName>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Snebur.Framework\src\AcessoDados\src\AcessoDados\Snebur.AcessoDados.csproj" />
+	  <ProjectReference Include="..\..\..\Snebur.Framework\src\Core\Snebur.csproj" />
+	  <ProjectReference Include="..\..\..\Snebur.Framework\src\Depuracao\Snebur.Depuracao.csproj" />
+	</ItemGroup>
 </Project>
