--- a/src/Snebur.VisualStudio2022/Snebur.VisualStudio2022.csproj
+++ b/src/Snebur.VisualStudio2022/Snebur.VisualStudio2022.csproj
@@ -94,6 +94,7 @@
     <Compile Include="HtmlEditor\HtmlIntellisense.cs" />
     <Compile Include="HtmlEditor\HtmlIntellisense.Static.cs" />
     <Compile Include="ItemTemplate\InstalarItensTemplate.cs" />
+    <Compile Include="ItemTemplate\InstalarItensTemplateInterno.cs" />
     <Compile Include="Json\JsonSchemaSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\OutputWindowCommand.cs" />
@@ -169,9 +170,9 @@
     <Content Include="Resources\ItemTemplate\PaginaI\Pagina.shtml" />
     <Content Include="Resources\ItemTemplate\PaginaI\PaginaItemTemplate.vstemplate" />
     <Content Include="Resources\ItemTemplate\PaginaI\__TemplateIcon.ico" />
-    <Content Include="Resources\ItemTemplate\Paginal-Scss\Pagina.shtml" />
-    <Content Include="Resources\ItemTemplate\Paginal-Scss\PaginaItemTemplate.vstemplate" />
-    <Content Include="Resources\ItemTemplate\Paginal-Scss\__TemplateIcon.ico" />
+    <Content Include="Resources\ItemTemplate\Pagina-Scss\Pagina.shtml" />
+    <Content Include="Resources\ItemTemplate\Pagina-Scss\PaginaItemTemplate.vstemplate" />
+    <Content Include="Resources\ItemTemplate\Pagina-Scss\__TemplateIcon.ico" />
     <None Include="ItemTemplate\Configuracoes StickyChristmas-master.zip" />
     <Content Include="lib\Microsoft.WebTools.Languages.Json.dll" />
     <Content Include="lib\Microsoft.WebTools.Languages.Json.Editor.dll" />
@@ -202,7 +203,7 @@
     <EmbeddedResource Include="Resources\ItemTemplate\Pagina.zip" />
     <EmbeddedResource Include="Resources\ItemTemplate\Pagina-Scss.zip" />
     <EmbeddedResource Include="Resources\ItemTemplate\JanelaCadastro.zip" />
-    <None Include="Resources\ItemTemplate\Paginal-Scss\Pagina.shtml.scss" />
+    <None Include="Resources\ItemTemplate\Pagina-Scss\Pagina.shtml.scss" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
       <Generator>VsixManifestGenerator</Generator>
@@ -232,7 +233,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.WebTools.Languages.Json, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Microsoft.WebTools.Languages.Json.dll</HintPath>
+      <HintPath>C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Web Tools\Languages\Microsoft.WebTools.Languages.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -269,7 +270,7 @@
     <PackageReference Include="Microsoft.CSharp">
       <Version>4.7.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.3.2093">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.5.4065">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -285,9 +286,9 @@
       <Project>{ae39cd55-5282-48a5-8131-6704c825f26a}</Project>
       <Name>Snebur.AcessoDados</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Snebur.Framework\src\Comunicacao\src\Comunicacao.WebSocket.Experimental\Snebur.Comunicacao.WebSocket.Experimental.csproj">
+    <ProjectReference Include="..\..\..\Snebur.Framework\src\Comunicacao\src\Comunicacao.WebSocket.Experimental\Snebur.Comunicacao.WebSocket.Experimental.Net48.csproj">
       <Project>{887586d8-d630-411d-96a9-3ce87707bd26}</Project>
-      <Name>Snebur.Comunicacao.WebSocket.Experimental</Name>
+      <Name>Snebur.Comunicacao.WebSocket.Experimental.Net48</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Snebur.Framework\src\Core\Snebur.csproj">
       <Project>{ec174c4f-8122-41a3-8360-f04c4c8fc3ba}</Project>
@@ -313,7 +314,7 @@
     <TypeScriptCompile Include="Resources\ItemTemplate\Janela-Scss\Janela.shtml.ts" />
     <TypeScriptCompile Include="Resources\ItemTemplate\Janela\Janela.shtml.ts" />
     <TypeScriptCompile Include="Resources\ItemTemplate\PaginaI\Pagina.shtml.ts" />
-    <TypeScriptCompile Include="Resources\ItemTemplate\Paginal-Scss\Pagina.shtml.ts" />
+    <TypeScriptCompile Include="Resources\ItemTemplate\Pagina-Scss\Pagina.shtml.ts" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
